--- a/backend/package.json
+++ b/backend/package.json
@@ -18,10 +18,19 @@
     "test": "npm start"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "firebase": "^12.7.0",
+    "firebase-admin": "^13.6.0",
+    "jsonwebtoken": "^9.0.3",
+    "mongodb": "^7.0.0",
     "mongoose": "^9.1.0",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "slugify": "^1.6.6",
+    "uuid": "^13.0.0"
   }
 }
